--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "framer-motion": "^4.1.2",
-    "next": "10.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "axios": "^1.11.0 ",
+    "caniuse-lite": "^1.0.30001735",
+    "framer-motion": "^12.23.12",
+    "next": "^15.5.0   ",
+    "react": "^19.1.1 ",
+    "react-dom": "^19.1.1 ",
     "react-palette": "^1.0.2"
   }
 }
